# ChangeLog for dev-ruby/will_paginate
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/ChangeLog,v 1.1 2009/12/15 19:55:31 flameeyes Exp $

*will_paginate-2.3.11-r1 (15 Dec 2009)

  15 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +will_paginate-2.3.11-r1.ebuild, +metadata.xml:
  Move mislav-will_paginate to will_paginate to follow upstream. Also move
  to ruby-fakegem this time. Restricting tests for now till a fix can be
  devised.

  24 Aug 2009; Hans de Graaff <graaff@gentoo.org>
  -mislav-will_paginate-2.3.7.ebuild:
  Remove old version.

*mislav-will_paginate-2.3.11 (08 Jun 2009)

  08 Jun 2009; Hans de Graaff <graaff@gentoo.org>
  -mislav-will_paginate-2.3.9.ebuild, +mislav-will_paginate-2.3.11.ebuild:
  Version bump. Fixes incompatibility introduced in 2.3.9, which is removed.

*mislav-will_paginate-2.3.9 (26 May 2009)

  26 May 2009; Hans de Graaff <graaff@gentoo.org>
  mislav-will_paginate-2.3.7.ebuild, +mislav-will_paginate-2.3.9.ebuild:
  dev-ruby/mocha is needed when running the tests.
  Bump version for improved Rails 2.3.2 compatibility. This makes the test
  suite pass when Rails 2.3.2 is installed.

  20 May 2009; Hans de Graaff <graaff@gentoo.org> Manifest:
  Redigest zip file now that github has fixed zip downloading.

  20 May 2009; Hans de Graaff <graaff@gentoo.org>
  mislav-will_paginate-2.3.7.ebuild:
  Add ~x86 keyword.

*mislav-will_paginate-2.3.7 (17 Apr 2009)

  17 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +mislav-will_paginate-2.3.7.ebuild:
  Initial import of mislav-will_paginate (new name of will_paginate).
  Loosely based on Wim Muskee work on bug #256077. Uses the github-produced
  tarball (renamed), has proper dependencies and an src_test function and
  installs a fake gemspec file.
