@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/will_paginate
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/ChangeLog,v 1.1 2009/12/15 19:55:31 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/will_paginate/ChangeLog,v 1.2 2009/12/15 19:59:15 flameeyes Exp $
+
+  15 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  will_paginate-2.3.11-r1.ebuild:
+  Examples are no longer part of the packaging.
 
 *will_paginate-2.3.11-r1 (15 Dec 2009)
 
